<resources>
    <string name="app_name">Fashion Brand Identifier</string>
    <string name="welcome_to">Welcome To!</string>
    <string name="hint">hint</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="enter_the_details_below">Enter the details below</string>
    <string name="title_activity_brands_display">BrandsDisplay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ContactUs">
We at Fashion Brand Identifier(FBI) are primarily focused to fulfil the needs of the trendies who are value in luxury brands like no one else. Here, we bring all the brands of different categories in the fashion industry under one roof so that you can be made aware of brands which deliver to your requirements in much better ways and get a chance to realize that the mainstream brands are not the only ones out there. We bring to you a highly diversified selection of the world’s finest.
</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="email_address">Email Address</string>
    <string name="register">Register</string>
    <string name="already_registered_just_login">Already registered? Just Login :)</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="identifier">Identifier</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">Search</string>/>
</resources>
