<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:background="#180C2B"
    tools:context=".Register">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="false"
        android:background="#180C2B">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="186dp"
        android:layout_height="194dp"
        android:contentDescription="TODO"
        android:src="@drawable/hello"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="412dp"
        android:layout_height="45dp"
        android:fontFamily="@font/alice"
        android:gravity="center"
        android:text="@string/enter_the_details_below"
        android:textColor="#FFF9FF00"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.057" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="239dp"
        android:layout_height="51dp"
        android:ems="10"
        android:fontFamily="@font/alice"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFF9FF00"
        android:textColorHint="#FFF9FF00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.062" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="241dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#FFF9FF00"
        android:fontFamily="@font/alice"
        android:textColorHint="#FFF9FF00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUser"
        app:layout_constraintVertical_bias="0.047" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="238dp"
        android:layout_height="54dp"
        android:layout_marginBottom="188dp"
        android:ems="10"
        android:fontFamily="@font/alice"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#FFF9FF00"
        android:textColorHint="#FFF9FF00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailAddress"
        app:layout_constraintVertical_bias="0.197" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="221dp"
        android:layout_height="60dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/coustard"
        android:background="#A49356D8"
        android:textSize="20sp"
        android:textColor="#FFF9FF00"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass"
        app:layout_constraintVertical_bias="0.226" />

    <TextView
        android:id="@+id/tvAlreadyRegistered"
        android:layout_width="402dp"
        android:layout_height="37dp"
        android:fontFamily="@font/alice"
        android:text="@string/already_registered_just_login"
        android:textColor="#FFF9FF00"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias="0.4" />


 </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>