<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#12032B"
    tools:context=".Main2Activity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#12032B"
        tools:context=".Main2Activity">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="297dp"
            android:layout_height="283dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/bgpf"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.006" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="328dp"
            android:layout_height="65dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:fontFamily="@font/alice"
            android:textColor="#FFF9FF00"
            android:textColorHint="#FFF9FF00"
            android:textStyle="bold|italic"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.406"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="329dp"
            android:layout_height="65dp"
            android:ems="10"
            android:fontFamily="@font/alice"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#FFF9FF00"
            android:textColor="#FFF9FF00"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            app:layout_constraintVertical_bias="0.101" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="190dp"
            android:layout_height="61dp"
            android:text="Lets Go!"
            android:background="#A49356D8"
            android:fontFamily="@font/coustard"
            android:textColor="#FFF9FF00"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintVertical_bias="0.244" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alice"
            android:gravity="center"
            android:text="New Member? Click here to Register now"
            android:textColor="#FFF9FF00"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alice"
            android:gravity="center"
            android:text="Forgot Password? Create a new one."
            android:textColor="#FFF9FF00"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvRegister"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

